# 3D-Bone-Reconstruction

./: .gitignore  3d-fossil-reconstruction-plan_baec8203.plan.md  README.md  lovely-wiggling-pudding.md  pyproject.toml
experiments/: finetune_fossil.yaml  pretrain_bone.yaml  relic_full.yaml
expert_interface/: app.py
paleocomplete/: eval_paleocomplete.py
scripts/: construct_paleocomplete.py  convert_ctm_to_ply.py  download_and_preprocess.py  download_morphosource.py  download_phenome10k.py  preprocess_phenome10k.py
src/: __init__.py
src/datasets/: __init__.py  augmentations.py  fossil_dataset.py  morphosource.py
src/domain_adaptation/: __init__.py  adaptation.py  ct_augmentations.py
src/eval/: __init__.py  evaluate.py  metrics.py  visualize.py
src/models/: __init__.py  conditioning.py  decoder.py  diffusion.py  encoder.py  relic.py  symmetry.py  vae.py
src/training/: __init__.py  losses.py  trainer.py
src/training/configs/: baseline_adapointr.yaml  relic_ablation_no_da.yaml  relic_ablation_no_phylo.yaml  relic_ablation_no_symmetry.yaml  relic_ablation_pcn_pretrain.yaml  relic_full.yaml
src/utils/: __init__.py  geometry.py  io.py  phylo.py
