[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relic-fossil"
version = "0.1.0"
description = "RELIC: Reconstruction of Extinct Life via Informed Completion"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "trimesh>=4.2",
    "openctm>=1.0",
    "transformers>=4.38",
    "geoopt>=0.5",
    "opentree>=1.0",
    "requests>=2.31",
    "tqdm>=4.66",
    "wandb>=0.16",
    "gradio>=4.20",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "nibabel>=5.2",
    "pyyaml>=6.0",
    "einops>=0.7",
    "plotly>=5.0",
]

[project.optional-dependencies]
# open3d has no Python 3.14 wheels yet; install manually when available
viz = ["open3d>=0.18"]
dev = ["pytest>=8.0", "black>=24.0", "ruff>=0.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "paleocomplete*", "expert_interface*"]
